Changes with APR 0.9.4

  *) Don't segfault trying to close a file in error paths of flock
     and fcntl mutex creation.  PR 19036  [Jeff Trawick]

  *) Add %pT support to apr_snprintf() for printing an apr_os_thread_t.
     [Jeff Trawick]

  *) Add APR_TCP_NODELAY_INHERITED & APR_O_NONBLOCK_INHERITED to apr.hw
     [Allan Edwards]

  *) Add APR_UINT64_T_HEX_FMT.  [Jeff Trawick]

  *) Add parameter to APR_SUBDIR_CONFIG to drop options passed to configure
     before the subdir's configure is invoked.
     [Jeff Trawick, Justin Erenkrantz]

  *) Implement APR_SO_RCVBUF socket option on Unix.  
     [Adam Sussman <myddryn@vishnu.vidya.com>]

  *) Don't add the math library (-lm) if the modf() function
     is already available via libc.  [Roy Fielding]

  *) Solaris cc: Don't use the -mt option for threaded builds.  That
     is for non-Posix threading, and the use of it prevented us from
     linking with -lpthread, which in turn caused weird problems for
     APR applications.  [Kristofer Spinka <kspinka@style.net>]

  *) OS/2: apr_stat() fixes - When a character device is stat'ed, 
     fill in finfo.name if it was asked for.  Return APR_INCOMPLETE 
     when appropriate.  Addresses httpd incident [CAN-2003-0134].
     [Brian Havard]

Changes with APR 0.9.3

  *) Don't enable posixsem, at build time, on systems where sem_t *
     won't "fit" into an int (sizeof-wise). Also, better error handling
     when we fail to create a posixsem. PR 17186 [Scott Herod
     <sherod@pillardata.com>, Jim Jagielski]

  *) Default hpux 10.x to disable threading, since if it exists at all
     the pthread implementation should not be trusted, while hpux 10 
     had its own threads implementation that is no longer supported.
     PR 9457 [William Rowe]

  *) Fix error in apr-config when symlinks are involved.
     [Garrett Rooney <rooneg@electricjellyfish.net>]

Changes with APR 0.9.2

  *) Numerous bug fixes for file and socket inheritence by child